fix: aprimorar leitura de JSON em JSONpersistence